:bug: Fix layout shift bug

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -18,7 +18,6 @@
   background: #000;
   color: #fff;
   min-height: 100vh;
-  min-height: var(--100vh);
   display: flex;
   flex-direction: column;
 }
